Utils 1.2 :
Création : 
	ComponentUtils : donne la taille maximal de l'espace util sur l'écran

Utils 1.1.1 :
bug fix : correction de version

Utils 1.1 :
création :
	FileUtils : Renvoie le texte d'un fichier

Utils 1 et Version 1 :
création :
	ImageIcon : redimensionnement
	Integer : vérifie si un String est un entier
	Time : conversion second en Time et inversement