@@ -2,6 +2,6 @@ Bibliothèque sous licence MIT
 
 Outils ajoutant quelques opérations bien utils sur certaines classes
 
-Dépendances : aucune
+Dépendances : commons-codec
 
 Pour construire, utilisez ant sans argument.
