@@ -3,7 +3,8 @@
 <property name="src.dir" value="./"/>
 <property name="bin.dir" value="bin"/>
 <property name="jar.dir" value="jar"/>
-<property name="version" value="1.2"/>
+<property name="version" value="1.3"/>
+<property name="name" value="utilsdruzy"/>
 
 <target name="clean">
 	<delete dir="${bin.dir}"/>
@@ -19,7 +20,7 @@
 
 <target name="jar" depends="compile">
 	<mkdir dir="${jar.dir}"/>
-	<jar destfile="${jar.dir}/utils-${version}.jar" basedir="${bin.dir}"/>
+	<jar destfile="${jar.dir}/${name}-${version}.jar" basedir="${bin.dir}"/>
 	<echo message="Création du fichier Jar terminée"/>
 </target>
 
