@@ -1,3 +1,6 @@
+utils 1.3 :
+création : NetworkUtils
+
 Utils 1.2 :
 Création : 
 	ComponentUtils : donne la taille maximal de l'espace util sur l'écran
